; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_GetUserObjectInformation.c_FreeGuarded.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/apitests/user32/extr_GetUserObjectInformation.c_FreeGuarded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MEM_RELEASE = common dso_local global i32 0, align 4
@STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"Status = %lx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @FreeGuarded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FreeGuarded(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = trunc i64 %7 to i32
  %9 = call i32 @PAGE_ROUND_DOWN(i32 %8)
  %10 = sext i32 %9 to i64
  store i64 %10, i64* %5, align 8
  store i32 0, i32* %6, align 4
  %11 = call i32 (...) @NtCurrentProcess()
  %12 = load i32, i32* @MEM_RELEASE, align 4
  %13 = call i64 @NtFreeVirtualMemory(i32 %11, i64* %5, i32* %6, i32 %12)
  store i64 %13, i64* %4, align 8
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* @STATUS_SUCCESS, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @ok(i32 %17, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @PAGE_ROUND_DOWN(i32) #1

declare dso_local i64 @NtFreeVirtualMemory(i32, i64*, i32*, i32) #1

declare dso_local i32 @NtCurrentProcess(...) #1

declare dso_local i32 @ok(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
